bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: bin/console/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only (current)  Chaos can read files  
  2. Full Access          Chaos can edit files  
                                                
  Press enter to confirm or esc to go back
